fix double scrollers in user_profile contract_summary transaction_history pages

--- a/src/styles/transaction-history.scss
+++ b/src/styles/transaction-history.scss
@@ -3,7 +3,8 @@
 .table-wrapper {
   margin: 10px 70px 70px;
   box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
-  height:100vh;
+  height: 80vh;
+  overflow: scroll;
 }
 
 .fl-table {
@@ -40,6 +41,12 @@
 
 .black {
   color: black;
+}
+
+thead th {
+  position: sticky;
+  top: 0;
+  box-shadow: 3px 3px 3px black;
 }
 
 .fl-table thead th {
@@ -130,11 +137,12 @@
 .dropdown-filter {
   position: relative;
   display: inline-block;
+  width: 100%;
 }
 
 .filter {
   border-radius: 5px;
-  height:100%;
+  height: 100%;
 }
 
 .filter-types {
