--- a/src/styles/user-profile.scss
+++ b/src/styles/user-profile.scss
@@ -6,9 +6,6 @@
   width: 100%;
   justify-content: center;
 }
-.user-profile-page {
-  height: 100vh;
-}
 
 .user-profile-container {
   background-image: linear-gradient(rgba(200, 200, 200, 1), $yellow);
@@ -359,10 +356,6 @@ button {
   button {
     bottom: 5px;
     left: 0;
-  }
-
-  .user-trx-tabs-container {
-    height: 110vh;
   }
 }
 
